PyAMF Changelog
===============

This file contains information about the changes between the different
versions of PyAMF.

.. contents::

0.5 (unreleased)
----------------
 - Removed duplicate method Context.reset, in favour of Context.clear
   (Ticket:527)
 - Rewrote cpyamf.util.BufferedByteStream to not depend on cStringIO. Added a
   C based api for stream functions (Ticket:513)
 - Unified exceptions for BufferedByteStream so that only IOError is raised.
   (Ticket:520)
 - Made raising pyamf.ReferenceError optional for all Indexed* and Context
   classes. Refactored AMF3 so that only one ClassDefinition appears per class
   (Ticket:524)
 - Strict type checking now on pyamf.util.BufferedByteStream (Ticket:512)
 - Removed the default loggers from p.r.gateway.*. To re-enable supply a
   logger instance as a keyword arg to the gateway constructor (Ticket:525)
 - Removed pyamf.util.make_classic_instance (as it is not used) (Ticket:521)
 - Removed pyamf.util.get_mro, in favour of inspect.getmro (Ticket:526)
 - Removed pyamf.util.Indexed[Collection|Map].remove (Ticket:518)

0.4.2 (2009-04-20)
------------------
 - Support for decoding the 'source' property on ArrayCollections (Ticket:488)
 - Fixed an issue in the GAE adapter where dynamic properties would be missing
   on referenced objects. (Ticket:511)
 - Fixed a critical issue with AMF0 reference counting when encoding remoting
   responses. (Ticket:510)
 - Strengthened http header handling in the client (Ticket:492)
 - Support for Django i18n ugettext_lazy (Ticket:496)
 - Added support for microseconds for datetime objects. Thanks to Derek Payton
   for the patch. (Ticket:490)
 - Added support for property types on SQLAlchemy mapped classes. (Ticket:491)
 - Added support for property types for Google AppEngine db.Model and
   db.Expando. (Ticket:487)

0.4.1 (2009-02-23)
------------------
 - amf0.Encoder.use_amf3 has been extended to cover all object types
   (Ticket:453,467)